--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "0.1.12",
     "react": "17.0.0",
     "react-dom": "17.0.0",
+    "react-native-web": "0.14.8",
     "react-redux": "7.2.2",
     "react-scripts": "3.4.3",
     "redux": "4.0.5"
